# git-workshop

./: .pdm.toml  .pre-commit-config.yaml  123.py  CHANGELOG.md  build.sh  pylint.py  pylint2.py  pyproject.toml  trdl.yaml  ttttt.py
.github/workflows/: bumpversion.yaml
