[tool.pdm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hansonlin", email = "cfps91155@gmail.com"},
]
dependencies = [
    "commitizen>=2.39.1",
    "pre-commit>=2.21.0",
    "pylint>=2.15.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}
